# fastchebpure

./: CMakeLists.txt  fastcheb.cpp  main.cpp
output/: 1-Butene_exps.json  ACETONE_exps.json  AMMONIA_exps.json  ARGON_exps.json  BENZENE_exps.json  CarbonDioxide_exps.json  CarbonMonoxide_exps.json  CarbonylSulfide_exps.json  CycloHexane_exps.json  CycloPropane_exps.json  Cyclopentane_exps.json  D4_exps.json  D5_exps.json  D6_exps.json  Deuterium_exps.json  Dichloroethane_exps.json  DiethylEther_exps.json  DimethylCarbonate_exps.json  DimethylEther_exps.json  ETHANE_exps.json  ETHANOL_exps.json  ETHYLENEOXIDE_exps.json  ETHYLENE_exps.json  EthylBenzene_exps.json  FLUORINE_exps.json  HELIUM_exps.json  HFE143m_exps.json  HYDROGEN_exps.json  HeavyWater_exps.json  HydrogenChloride_exps.json  HydrogenSulfide_exps.json  IsoButane_exps.json  IsoButene_exps.json  Isohexane_exps.json  Isopentane_exps.json  KRYPTON_exps.json  MD2M_exps.json  MD3M_exps.json  MD4M_exps.json  MDM_exps.json  (+82 more)
outputcheck/: 1-Butene_check.json  Acetone_check.json  Ammonia_check.json  Argon_check.json  Benzene_check.json  CarbonDioxide_check.json  CarbonMonoxide_check.json  CarbonylSulfide_check.json  CycloHexane_check.json  CycloPropane_check.json  Cyclopentane_check.json  D4_check.json  D5_check.json  D6_check.json  Deuterium_check.json  Dichloroethane_check.json  DiethylEther_check.json  DimethylCarbonate_check.json  DimethylEther_check.json  Ethane_check.json  Ethanol_check.json  EthylBenzene_check.json  EthyleneOxide_check.json  Ethylene_check.json  Fluorine_check.json  HFE143m_check.json  (+96 more)
